--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy:ropsten": "truffle migrate --network ropsten",
+    "test": "npm test"
   },
   "author": "",
   "license": "ISC",
@@ -30,6 +31,7 @@
     "react-dom": "^16.4.1",
     "truffle": "^4.1.11",
     "truffle-contract": "^3.0.5",
+    "truffle-hdwallet-provider": "0.0.5",
     "zeppelin-solidity": "^1.7.0"
   }
 }
